src/pages/about/index.css
@import '../../components/variables';

.about-features {
  margin-top: var(--space-double);

  @media (--up-small) {
    display: flex;
    flex-flow: row wrap;
  }
}

.about-feature {
  font-family: var(--font-sans-serif);
  margin-top: var(--space-single);

  @media (--up-small) {
    width: 50%;
  }
}

.about-feature > em {
  font-style: normal;
  font-weight: 800;
}

.about-feature > strong {
  font-style: normal;
  font-weight: 600;
  font-size: var(--size-large);
  color: var(--color-dark-blue);
  display: block;
}

.frontside-separator {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  font-size: var(--size-base);
  text-transform: uppercase;
  font-weight: 600;
  justify-content: space-between;
}

.frontside-separator--text {
  flex-shrink: 0;
  margin: 0 var(--space-single);
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.frontside-separator--text > img {
  margin: 0 var(--space-single);
}

.frontside-separator:before, .frontside-separator:after {
  content: '';
  display: block;
  width: 200px;
  height: 1px;
  background: #999999;
  flex-shrink: 5;
}

.frontside-values {
  text-align: center;
  @media (--up-small) {
    margin: 0 var(--space-quadruple);
  }
}

.cta-box {
  background: #F3F8FF;
  padding: var(--space-double) var(--space-single);
  @media (--up-small) {
    display: flex;
    flex-flow: row nowrap;
  }
}

.cta-box--header {
  font-size: var(--size-xl);
  color: var(--color-light-blue);
  
  @media (--up-small) {
    width: 40%;
    flex-shrink: 0;
    text-align: center;
  }
}

.cta-box--header > h2 {
  display: inline-block;
  font-size: var(--size-large);
  border-bottom: 2px solid var(--color-light-blue);
  margin-right: var(--space-single);
  margin-top: 0;
}

.cta-box--header > h2 > a {
  text-decoration: none;
  color: var(--color-dark-blue);
}

.cta-box--body {
  box-sizing: border-box;
  @media (--up-small) {
    padding: 0 var(--space-triple);
  }
}

.cta-box--body > p {
  font-family: var(--font-sans-serif);
}

.cta-box--contact {
  font-family: var(--font-sans-serif);
  font-weight: 800;
  text-decoration: none;
  font-size: var(--size-base);
  color: var(--color-dark-blue);
}

.oss-intro-parragraph {
  text-align: center;
  margin: var(--space-quadruple) var(--space-quadruple) var(--space-double) var(--space-quadruple);
}

.oss-projects-list {
  display: flex;
  flex-flow: row wrap;
  margin-bottom: var(--space-quadruple);
}

.oss-project {
  width: 50%;
  box-sizing: border-box;
  padding-right: var(--space-double);
}

.oss-project--title {
  text-decoration: none;
}

.oss-project--github-link {
  color: var(--body-color);
  font-family: var(--font-sans-serif);
  font-size: var(--size-med-lg);
  text-decoration: none;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.oss-project--stars-label {
  color: var(--body-color-faded);
  font-size: var(--size-base);
  margin-left: var(--space-single);
}

.oss-project--stars-label > .svg-inline--fa {
  margin-right: var(--space-half);
}

